--- a/experience.css
+++ b/experience.css
@@ -47,7 +47,7 @@ span.experience-department {
 	line-height: 24px;
 	font-weight: 300;
 	padding-left: 28px;
-	position: relative;
+	/* position: relative; */
 	margin-bottom: 20px;
 }
 
@@ -57,6 +57,6 @@ span.experience-department {
 	line-height: 24px;
 	font-weight: 300;
 	padding-left: 28px;
-	position: relative;
+	/* position: relative; */
 	margin-bottom: 20px;
 }
