--- a/style.css
+++ b/style.css
@@ -102,3 +102,62 @@ body {
 	flex: 0 0 auto;
 	width: 50%;
 }
+
+.footer {
+	background-color: #000;
+	padding: 120px 0;
+	text-align: center;
+}
+
+.footer section {
+	padding-bottom: 97px;
+}
+
+.footer section span {
+	color: rgba(255, 255, 255, 0.5);
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 16px;
+	letter-spacing: 1px;
+	display: block;
+	padding-bottom: 20px;
+}
+
+.footer section h4 {
+	color: #fff;
+	font-size: 48px;
+	font-weight: 700;
+}
+
+.footer section p {
+	letter-spacing: 1.13px;
+	color: #fff;
+	font-size: 18px;
+	margin-bottom: 40px;
+}
+
+.footer .button {
+	display: inline-block;
+	text-transform: uppercase;
+	font-size: 12px;
+	line-height: 13px;
+	font-weight: 600;
+	letter-spacing: 3px;
+	color: #f26464;
+	padding: 17px 30px;
+	border: 2px solid #f26464;
+	border-radius: 60px;
+	text-decoration: none;
+}
+
+.footer .copyright {
+	color: rgba(255, 255, 255, 0.5);
+	letter-spacing: 1px;
+	font-size: 16px;
+	text-align: center;
+}
+
+.copyright a {
+	color: rgba(255, 255, 255, 0.5);
+	text-decoration: none;
+}
